# filematcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  JSON_SCHEMA.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  benchmark_hashes.py  create_demo.sh  create_release.py  demo.tape  example.sh  file_matcher.py  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  test_file_matcher.py  test_real_directories.py
.planning/: IDEAS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TODOS.md  config.json  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  (+4 more)
filematcher/: __init__.py  __main__.py  actions.py  cli.py  colors.py  directory.py  filesystem.py  formatters.py  hashing.py  types.py
test_dir1/: common_name.txt  file1.txt  file3.txt
test_dir2/: also_different_name.txt  common_name.txt  file4.txt
tests/: __init__.py  run_all_tests.py  test_actions.py  test_base.py  test_cli.py  test_color_output.py  test_determinism.py  test_directory_operations.py  test_dry_run.py  test_error_handling.py  test_fast_mode.py  test_file_hashing.py  test_formatters.py  test_interactive.py  test_json_output.py  test_master_directory.py  test_output_unification.py  test_real_directories.py  test_safe_defaults.py
(+232 files in other folders)
